# cicada

./: .dockerignore  .env.example  .gitignore  .typos.toml  Makefile  README.md  dev-requirements.txt  executor.Dockerfile  file.ci  issue.ci  pyproject.toml  requirements.txt  setup.py  test.ci
.devcontainer/: Dockerfile  devcontainer.json  nginx.conf
cicada/: cli.py  logging.py  setup.sh
cicada/api/: __main__.py  di.py  docker-init.sh  logging.py  main.py  middleware.py  settings.py  setup.py
cicada/api/application/: exceptions.py
cicada/api/application/env/: add_env_vars_to_repo.py
cicada/api/application/session/: make_session_from_trigger.py  rerun_session.py  stop_session.py  stream_session.py
cicada/api/application/user/: change_password.py  local_user_login.py
cicada/api/common/: datetime.py  json.py  password_hash.py
cicada/api/domain/: installation.py  repository.py  session.py  terminal_session.py  triggers.py  user.py
cicada/api/domain/services/: repository.py
cicada/api/endpoints/: csrf.py  di.py  env.py  installation.py  login.py  login_util.py  oauth_util.py  runner.py  secret.py  session.py  task_queue.py
cicada/api/endpoints/gitlab/: projects.py
cicada/api/endpoints/sso/: github.py  gitlab.py
cicada/api/endpoints/webhook/: common.py
cicada/api/infra/: cache_repo.py  common.py  db_connection.py  environment_repo.py  installation_repo.py  migrate.py  repo_get_ci_files.py  repository_repo.py  run_program.py  runner_repo.py  secret_repo.py  secret_repo_shim.py  session_repo.py  terminal_session_repo.py  user_repo.py  vault.py  waitlist_repo.py
cicada/api/infra/github/: auth.py  common.py  stop_session.py  workflows.py
cicada/api/infra/gitlab/: auth.py  common.py  webhook_repo.py  workflows.py
cicada/api/infra/notifications/: send_email.py
cicada/api/repo/: environment_repo.py  installation_repo.py  repository_repo.py  run_check.py  session_repo.py  terminal_session_repo.py  user_repo.py  waitlist_repo.py
cicada/application/: exceptions.py
cicada/application/cache/: cache_files.py  restore_cache.py
cicada/application/env/: add_env_vars_to_repo.py
cicada/application/notifications/: send_notification.py
cicada/application/secret/: delete_installation_secret.py  delete_repository_secret.py  gather_secrets_from_trigger.py  list_installation_secrets.py  list_repository_secrets.py  set_installation_secret.py  set_repository_secret.py
cicada/application/session/: common.py  make_session_from_trigger.py  rerun_session.py  stop_session.py  stream_session.py
cicada/application/user/: change_password.py  local_user_login.py
cicada/ast/: common.py  entry.py  generate.py  nodes.py  semantic_analysis.py  types.py
cicada/common/: generator_wrapper.py  json.py
cicada/domain/: cache.py  datetime.py  env_var.py  installation.py  notification.py  password_hash.py  runner.py  secret.py  session.py  terminal_session.py  triggers.py  user.py
cicada/domain/repo/: cache_repo.py  environment_repo.py  gitlab_webhook_repo.py  installation_repo.py  repository_repo.py  runner_repo.py  secret_repo.py  session_repo.py  terminal_session_repo.py  user_repo.py  waitlist_repo.py
cicada/domain/services/: repository.py
cicada/eval/: builtins.py  constexpr_visitor.py  container.py  find_files.py  main.py  on_statement_visitor.py
cicada/eval/builtins/: hashof.py
cicada/parse/: token.py  tokenize.py
cicada/runner/: __main__.py  pyproject.toml  setup.py
cicada/scripts/: checkout_commit.py
cicada/tools/workflow_converter/: github_actions.py
docs/: SUMMARY.md  book.toml  executors.md  faq.md  getting-started.md  github-codespaces.md  installing.md  making-a-github-app.md  making-a-gitlab-webhook.md  project-structure.md  self-hosted-runner.md
docs/ci-lang/: README.md  block-expr.md  built-in-functions.md  caching.md  control-flow.md  event-types.md  exprs.md  for-stmt.md  functions.md  getting-started.md  if-expr.md  import-stmt.md  let-expr.md  let-statement.md  lists.md  on-statement.md  opers.md  run-on-statement.md  secrets.md  shell-stmt.md  sub-workflows.md  title-statement.md  types.md
frontend/: cookies.html  dashboard.html  installation.html  landing.html  login.html  privacy.html  repo.html  robots.txt  run.html  runs.html  settings.html  sitemap.xml  terms.html
frontend/connect/: gitlab.html
frontend/static/: ansi_up.min.js  auth.js  common.css  common.js  secret.css  secret.js
frontend/static/fonts/: TSCHICHOLD_OFL.txt
frontend/static/img/icon/: site.webmanifest
images/: executor-default.Dockerfile  self-hosted-runner.Dockerfile
test/: common.py  test_common.py
test/api/: common.py  test_dataclass_asjson.py  test_datetime.py  test_db_connection.py  test_migrate.py  test_session.py  test_settings.py  test_terminal_session.py
test/api/application/cache/: test_cache_files.py  test_restore_cache.py
test/api/application/env/: test_add_env_vars_to_repo.py
test/api/application/secret/: test_delete_installation_secret.py  test_delete_repository_secret.py  test_gather_secrets_from_trigger.py  test_list_installation_secrets.py  test_list_repository_secrets.py  test_set_installation_secret.py  (+1 more)
test/api/endpoints/: common.py  dummy_secret_repo.py  test_csrf.py  test_enabled_providers.py  test_github_sso.py  test_jwt.py  test_login.py  test_main.py  test_session.py  test_task_queue.py
test/api/infra/: test_environment_repo.py  test_gitlab_webhook_repo.py  test_installation_repo.py  test_repository_repo.py  test_run_program.py  test_secret_repo.py  test_session_repo.py  test_terminal_session_repo.py  test_waitlist_repo.py
test/api/middleware/: test_custom_exception_handler.py
test/api/webhook/: test_common.py
test/ast/: common.py  test_generate.py  test_nodes.py  test_semantic_analysis.py  test_types.py
test/domain/: test_cache.py  test_secret.py  test_triggers.py
test/domain/repo/: mock_session_repo.py
test/eval/: test_eval_exprs.py  test_eval_function.py  test_eval_main.py  test_eval_member_function.py  test_eval_statements.py  test_find_files.py  test_on_stmt_visitor.py
test/parse/: test_tokenize.py
(+45 files in other folders)
