[tool.poetry]
name = "cicada"
version = "0.0.0"
description = "The Next Generation of CI/CD"
authors = ["dosisod"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dosisod/cicada"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
color_output = true
known_first_party = ["test"]

[tool.mypy]
namespace_packages = true
strict = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
warn_unreachable = true
allow_redefinition = true
python_version = "3.11"

[tool.coverage.run]
omit = [
  # Just a bunch of abstract classes
  "cicada/api/repo/*",
  "cicada/api/logging.py",
  "cicada/api/infra/migrate.py",
  "cicada/api/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
  "raise NotImplementedError\\(\\)",
  "pragma: no cover",
  "def __str__(self)",
  "assert False"
]
skip_covered = true
skip_empty = true

[tool.black]
line-length = 79
color = true

[tool.pytest.ini_options]
addopts = "--cov=cicada --cov-report=html --cov-report=term-missing --cov-fail-under=93 --disable-warnings"
asyncio_mode = "auto"
testpaths = ["test"]

[tool.ruff]
line-length = 79

select = ["ALL"]

extend-ignore = [
  "A001", "A002", "A003",
  "ANN101", "ANN102", "ANN202", "ANN401",
  "ARG002",
  "COM812",
  "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
  "D200", "D202", "D203", "D205", "D212",
  "D400", "D401", "D404", "D415",
  "EM101", "EM102",
  "F405",
  "FBT001", "FBT003",
  "FLY002",
  "G004",
  "I001",
  "N818",
  "PGH003",
  "PLR2004",
  "PLW2901",
  "RSE102",
  "S101",
  "SIM102",
  "TD002",
  "TD003",
  "TRY003", "TRY301",

  # Fix later
  "B011",
  "C901",
  "PLR0911", "PLR0912", "PLR0913",
  "T201",
]

[tool.ruff.per-file-ignores]
"cicada/parse/token.py" = ["E701"]
"cicada/api/*" = ["B008"]
"cicada/*" = ["PT", "INP001"]
"test/ast/test_generate.py" = ["W293"]
"cicada/eval/container.py" = ["S603", "S607", "S108"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
